2021-01-16
- Add reverse element enterprise ID 29305 for counter values
- Add biFlow direction element 239
- Add flow end reason element 136
- Make -Tall the default for nfcapd to collect extensions

2020-12-22
- Code cleanup and boundary checks in option template processing

2020-12-19
- Implement element 160 (SystemInitTime) in option template

2020-12-19
- Add Element 160 (SystemInitTime) in flow record used by Huawei

2020-12-05
- Fix path handling for -l <dir>
- Fix print plain numbers #263

2020-11-21
- Release 1.6.22

2020-10-18
- Fix nfreplay v5 time shift bug

2020-10-17
- add support for >=, <= comparators. #256. Thanks to piorek94
- Fix yacc/bison warnings. Cleanup unused tokens
- Fix syntax error 'flags AS' as AS is a reserved word. #255
- Add element 139 for ICMP type/code in IPv6. #250
- Fix IPv4/IPv6 statistics representation #252

2020-09-12
- Cleanup nip/xip filter syntax. Add filter syntax 'nip in [ <iplist>]'. Request #246

2020-09-03
- Add nfversion to nfpcapd

2020-08-31
- Add collected netflow/sflow version in nfdump record. Request #242
- Fix GuessDir bug - issue #215

2020-08-02
- Re-address issue #231 - remove strict rule rfc 7011

2020-08-02
- Release 1.6.21
- Address issue #159. Implement rfc 7011 and include sender UDP port into unique template identification
- Address issue #236 Add token 'dir' equivalent to 'flowdir' in filter syntax

2020-07-25
- Add optional print direction ascending or descending to output of statistics -s and oredered printing -O. Request #235
- Fix issue #234 
- Fix #230 - Avoid use_syslog name clash on certain OS

2020-06-20
- Honor -n flag when printing sorted flow cache
- Fix uninitialized variable printPlain
- Fix bug #223 limit matchig flows -c
- Restore old behaviour unlimiting output flows unless in -s stat
- Fix ft2nfdump nexthop fields
- Fix ft2nfdump extension map size
- internal: put output parameters in a single struct
- Fix GuessDir bug - issue #215
- Compact Changelog