@@ -241,7 +241,7 @@ Flow Record:
   src port     =              2024
   dst port     =                25
   fwd status   =                 5
-  tcp flags    =              0x01 .......F
+  tcp flags    =              0x00 ........
   biFlow Dir   =              0x00 arbitrary
   end reason   =              0x00 
   proto        =                17 UDP
@@ -298,7 +298,7 @@ Flow Record:
   src port     =              3024
   dst port     =                25
   fwd status   =                 6
-  tcp flags    =              0x02 ......S.
+  tcp flags    =              0x00 ........
   biFlow Dir   =              0x00 arbitrary
   end reason   =              0x00 
   proto        =                51 AH
